[package]
name = "mi_opaque_pake"
version = "0.1.0"
edition = "2021"

[lib]
name = "mi_opaque_pake"
crate-type = ["staticlib"]

[dependencies]
argon2 = "0.5"
bincode = "1.3"
opaque-ke = { version = "4.1.0-pre.1", default-features = false, features = ["argon2", "ristretto255", "serde", "std"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"

